# jade-vita

./: .gitignore  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
src/: i18n.rs  input.rs  jobs.rs  locale.rs  main.rs  safe_memory.rs
src/app/: mod.rs  ui.rs
src/gfn/: auth.rs  catalog.rs  cloudmatch.rs  covers.rs  headers.rs  input_protocol.rs  mod.rs  peer.rs  sdp.rs  signaling.rs
src/i18n/: en-US.ftl  es-ES.ftl
src/shell/: egui_painter.rs  mod.rs  surface.rs
src/streaming/: audio.rs
src/streaming/video/: decoder.rs  memory.rs  mod.rs  worker.rs
static/sce_sys/livearea/contents/: template.xml
tools/: vita-ar  vita-ar.cmd  vita-gcc  vita-gcc.cmd  vita-pkg-config  vita-pkg-config.cmd  vita-tool  vita-tool.cmd
